--- a/templates/pie.html
+++ b/templates/pie.html
@@ -18,9 +18,9 @@
 		// Generate the pie chart
 		// Generate the pie chart
 		var pieChartDiv = d3.select('#pie-chart');
-		var margin = { top: 100, right: 20, bottom: 100, left: 20 };
+		var margin = { top: 150, right: 20, bottom: 150, left: 20 };
 		var width = pieChartDiv.node().getBoundingClientRect().width - margin.left - margin.right;
-		var height = 400 - margin.top - margin.bottom;
+		var height = 600 - margin.top - margin.bottom;
 		var radius = Math.min(width, height) / 2;
 
 		var pieChart = pieChartDiv.append('svg')
@@ -28,9 +28,10 @@
 		  .attr('height', height + margin.top + margin.bottom)
 		  .append('g')
 		  .attr('transform', 'translate(' + (width / 2 + margin.left) + ',' + (height / 2 + margin.top) + ')');
-
-		var color = d3.scaleOrdinal(d3.schemeCategory10);
-
+		
+		//var color = d3.scaleOrdinal(d3.schemeCategory10);
+		var color = d3.scaleOrdinal(d3.quantize(d3.interpolateRainbow, data.pie_chart.length+1));
+		//var color = d3.scaleOrdinal().domain(data);
 		var pie = d3.pie()
 		  .sort(null)
 		  .value(function(d) { return d.value; });
